# ids

./: .gitignore  CMakeLists.txt  Makefile  README.md  bash.sh
Collector/: check.c  config.c  config.h  file_monitor.c  logger.c  main.c  monitor.c  netread.c  process.c  process.h  registry.c  registry.h  sniffer.c  sniffer.h  state.c  state.h
Collector/Common/: global.c  global.h
Collector/FileMonitor/: file.c  file.h
Collector/Network/: sniffer.c  state.c  state.h
Collector/ProcessMonitor/: process.c
Collector/RegistryMonitor/: registry.c  registry.h
Collector/packet/: sniffer.c
Config/: config.json
config/: cids.conf
ids_core/: CMakeLists.txt
ids_core/include/: alerts.h  datalink.h  ids_api.h  ml_bridge.h  network.h  packet_handler.h  pkt_info.h  platform.h  rules.h  transport.h
ids_core/src/: alerts.c  capture.c  datalink.c  ids_api.c  ml_bridge.c  network.c  packet_handler.c  rules.c  transport.c
include/: alerts.h  capture.h  cli.h  config.h  daemon.h  packet.h  rules.h
qt_gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  ids_wrapper.cpp  ids_wrapper.h
rules/: cids.rules
src/: alerts.c  capture.c  cli.c  config.c  daemon.c  main.c  rules.c
tests/: cli_test.c  config_test.c  config_test.conf  rules_test.c  rules_test.rules
